# yggdra

./: .gitattributes  .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  FEATURE_SUMMARY.md  IMPLEMENTATION_COMPLETE.txt  IMPLEMENTATION_NOTES.md  LICENSE  MARKDOWN_IMPLEMENTATION_SUMMARY.md  MARKDOWN_RENDERING.md  MODEL_VALIDATION.md  Makefile  OPENROUTER_SETUP.md  PHASE1_REWRITE_COMPLETE.md  PHASE2_COMPLETION.md  PHASE2_OLLAMA_COMPLETE.md  PHASE3_FINAL_REPORT.txt  PHASE3_IMPLEMENTATION_SUMMARY.md  PHASE3_TOOLS_COMPLETE.md  PHASE4_COMPLETE.md  README.md  REFINEMENTS_COMPLETE.md  SQLITE_MIGRATION.md  THIRD_PARTY_LICENSES.md  TOOLS_USER_GUIDE.md  deny.toml  inject_agents.py  inject_agents_runtime.py  inject_agents_v3.py  inject_agents_v4.py  models.json  panel_design.md  test_directory_sessions.sh  test_sh_bug.rs
.cargo/: config.toml
.github/workflows/: airgap-audit.yml  ci.yml  release.yml  snapshot.yml  vendor-update.yml
.yggdra/: LAUNCH_OPTIMIZATION_PLAN.md  NOTIFICATION_IMPLEMENTATION.md  OPTIMIZATION_CHECKLIST.md  OPTIMIZATION_FINDINGS.md  config.json  epoch_summary.md  gaps  memory.md  messages.jsonl  messages_scrollback.jsonl  session_id  stats.json  thought.md
.yggdra/async/: build-optimized.txt  build-titled-notifications.txt  measure-startup-p3.txt
.yggdra/plans/: active-plan.md  plan-tracking.md  update_progress.py
.yggdra/todo/: README.md  clock-12hr-date.md  i-see--let-s-remove-the-status-bar-from-the-tui.md  now-let-s-remove-the-status-bar-from-the-tui--i-ll.md  tool-call-call-editfile--yggdra-todo-readme-md.md  tool-call-call-rg--todo---yggdra-todo---tool-sep.md  tool-call-call-rg--tool-sep-status--tool-sep-src.md  tool-call-call-rg--tool-sep-status-status--tool.md  tool-output--rg--tool-sep-palette--tool-sep-statu.md
scripts/: release.sh  setup-openrouter-proxy.sh  test-inference.sh
src/: agent.rs  battery.rs  config.rs  dlog.rs  epoch.rs  gaps.rs  highlight.rs  knowledge_index.rs  lib.rs  main.rs  markdown.rs  message.rs  metrics.rs  msglog.rs  network.rs  notifications.rs  ollama.rs  ollama.rs-e  sandbox.rs  session.rs  spawner.rs  stats.rs  steering.rs  sysinfo.rs  task.rs  theme.rs  tokens.rs  tools.rs  ui.rs  watcher.rs
src/ui/: mod.rs  panels.rs  render_panels.rs  stream.rs
target-agg-core/: .rustc_info.json
target-agg-core/debug/.fingerprint/aho-corasick-cfde7f59d01f8d06/: lib-aho_corasick  lib-aho_corasick.json
target-agg-core/debug/.fingerprint/allocator-api2-88f5e0541fea0bd5/: lib-allocator_api2  lib-allocator_api2.json
target-agg-core/debug/.fingerprint/anyhow-1dce37a318ac7e8f/: lib-anyhow  lib-anyhow.json
target-agg-core/debug/.fingerprint/anyhow-24c0d58736255b09/: build-script-build-script-build  build-script-build-script-build.json
target-agg-core/debug/.fingerprint/anyhow-b4fdf6ad1e7b392c/: run-build-script-build-script-build  run-build-script-build-script-build.json
target-agg-core/debug/.fingerprint/async-openai-5b98b24c2f6ac434/: lib-async_openai  lib-async_openai.json
target-agg-core/debug/.fingerprint/async-openai-macros-83e42f73f362f836/: lib-async_openai_macros  lib-async_openai_macros.json
target-agg-core/debug/.fingerprint/atomic-waker-304ba3f78cc24bc1/: lib-atomic_waker  lib-atomic_waker.json
target-agg-core/debug/.fingerprint/autocfg-ef059e3456c517aa/: lib-autocfg  lib-autocfg.json
target-agg-core/debug/.fingerprint/aws-lc-rs-b6ca7b56ad9aa562/: lib-aws_lc_rs  lib-aws_lc_rs.json
target-agg-core/debug/.fingerprint/aws-lc-rs-c5577fabf821e09a/: build-script-build-script-build  build-script-build-script-build.json
target-agg-core/debug/.fingerprint/aws-lc-rs-e9c01a9adb9bd326/: run-build-script-build-script-build  run-build-script-build-script-build.json
target-agg-core/debug/.fingerprint/aws-lc-sys-280c740633491a8d/: lib-aws_lc_sys  lib-aws_lc_sys.json
target-agg-core/debug/.fingerprint/aws-lc-sys-ad9671a87c2c2066/: run-build-script-build-script-main  (+1 more)
tests/: agent_agentic_loop.rs  command_timeout_tests.rs  e2e_tool_pipeline.rs  edge_cases_integration.rs  file_edit_tests.rs  integration_tests.rs  model_compat.rs  model_output_snapshots.rs  ollama_integration_tests.rs  preposterous_stress_tests.rs  qwen_abliterated_tests.rs  setfile_e2e_integration.rs  shell_execution_tests.rs  spawn_shell_patterns.rs  stats_concurrency.rs  test_session_creation.rs  timeout_runtime_integration.rs  tool_call_parsing_proofs.rs  tools_integration.rs
(+830 files in other folders)
