[package]
name = "yggdra"
version = "0.2.7"
edition = "2021"
description = "Airgapped agentic TUI for local LLM inference with tool execution"
authors = ["Nina Reynolds <nina@girlhours.info>"]
license = "MIT"
repository = "https://github.com/cutecycle/yggdra"
homepage = "https://github.com/cutecycle/yggdra"
documentation = "https://github.com/cutecycle/yggdra"
readme = "README.md"
keywords = ["tui", "llm", "ollama", "agent", "cli"]
categories = ["command-line-utilities", "command-line-interface"]
exclude = [".github", "target", ".yggdra/**", "models.json", "*.txt", "vendor", "target-*"]

[lib]
name = "yggdra"
path = "src/lib.rs"

[[bin]]
name = "yggdra"
path = "src/main.rs"

[[bin]]
name = "yggdra-shell"
path = "src/bin/yggdra-shell.rs"

[[bin]]
name = "test_models"
path = "src/bin/test_models.rs"
required-features = ["inference-only"]

[dependencies]
anyhow = "1.0.102"
chrono = { version = "0.4.44", features = ["serde"] }
crossterm = "0.29.0"
dirs = "6.0.0"
notify-rust = "4.14.0"
ratatui = "0.30.0"
regex = "1.10"
reqwest = { version = "0.12.10", features = ["json", "stream"], optional = true }
futures-util = "0.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
tokio = { version = "1.51.1", features = ["full"] }
uuid = { version = "1.23.0", features = ["v4", "serde"] }
toml = "1.1.2"
libc = "0.2.184"
notify = "6.1.1"
unicode-width = "0.2"
url = "2.5"
async-openai = { version = "0.36.0", features = ["byot", "chat-completion"], optional = true }

[dev-dependencies]
tempfile = "3.14.0"

[features]
default = ["inference-only"]
inference-only = ["reqwest", "async-openai"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = false
debug = true
panic = "abort"

[profile.dev]
opt-level = 0
debug = true
